[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lad-mcp-server"
version = "0.2.6"
description = "MCP server providing system design review and code review via OpenRouter with optional Serena context."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]

dependencies = [
  "mcp[cli]>=1.2.0",
  "openai>=1.0.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.6.0",
  "pydantic-settings>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.5.0",
]

[project.scripts]
lad-mcp-server = "lad_mcp_server.__main__:main"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.setuptools.packages.find]
where = ["."]
include = ["lad_mcp_server*"]
exclude = ["research*", "tests*", "scripts*"]
